--- a/electron-version/package.json
+++ b/electron-version/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "electron-version",
+  "name": "jspaint-desktop",
   "version": "1.0.0",
   "description": "Electron Desktop App version of my Simple JS-Paint web app",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-app": "electron ."
   },
   "keywords": [
     "npm",
